# Glosaap

./: .coverage  .gitignore  CHANGELOG.md  DEVELOPER_GUIDE.md  README.md  build.py  glosaap.spec  main.py  pyproject.toml  pytest.ini  release.py  requirements-dev.txt  requirements.txt  test_update.py  updater.py  updater.spec
.github/: copilot-instructions.md
.github/workflows/: auto-release.yml  ci.yml
app/: __init__.py
app/config/: __init__.py  eps_config.py  settings.py
app/core/: __init__.py  coosalud_procerssor.py  data_processor.py  eps_processors.py  homologacion_service.py  homologar_observacion.py  imap_client.py  mix_excel_service.py  mutualser_processor.py  session_manager.py
app/service/: attachment_service.py  auth_service.py  credential_manager.py  email_service.py  update_service.py
app/ui/: app.py  app_new.py  app_refactored.py  app_state.py  (+3 more)
docs/: AUTO_UPDATE.md  DEVELOPER_GUIDE.md  GUIA_GIT_CAMBIOS.md  MANUAL_USUARIO.md
tests/: __init__.py  conftest.py  test-6.py  test_app.py  test_app_state.py  test_attachment_service.py  test_auth_service.py  test_base_scraper.py  test_business_logic.py  test_coosalud_processor.py  test_credential_manager.py  test_email_service.py  test_eps_config.py  test_familiar_scraper.py  test_fomag_scraper.py  test_homologacion_service.py  test_homologar_observacion.py  test_imap_client.py  test_imap_fetch_recent.py  test_imap_search.py  test_mix_excel_service.py  test_mutualser_processor.py  test_navigation.py  test_processors.py  test_session_manager.py  test_settings.py  test_styles.py  test_update_service.py
(+33 files in other folders)
